--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "A yoga reiki website for Claire Golubski",
   "main": "index.js",
-    "scripts": {
-        "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {
+    "start": "babel-node src",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alex Doll",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel-preset-env": "^1.7.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
+  }
 }
