--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint src"
   },
   "author": "Alex Doll",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "babel-preset-env": "^1.7.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "eslint": "^5.10.0",
+    "eslint-plugin-react": "^7.11.1"
   }
 }
