--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node src",
-    "test": "eslint src"
+    "test": "eslint src && flow"
   },
   "author": "Alex Doll",
   "license": "ISC",
@@ -14,7 +14,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^5.10.0",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.89.0"
   }
 }
