Add jest to the project and create a test for dog

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node src",
-    "test": "eslint src && flow"
+    "test": "eslint src && flow && jest --coverage"
   },
   "author": "Alex Doll",
   "license": "ISC",
@@ -15,10 +15,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^5.10.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-react": "^7.11.1",
-    "flow-bin": "^0.89.0"
+    "flow-bin": "^0.89.0",
+    "jest": "^23.6.0"
   }
 }
