--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node src",
-    "test": "eslint src && flow && jest --coverage"
+    "test": "eslint src && flow && jest --coverage",
+    "precommit": "npm test",
+    "prepush": "npm test"
   },
   "author": "Alex Doll",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.89.0",
+    "husky": "^1.2.1",
     "jest": "^23.6.0"
   }
 }
