--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "start": "npm run-script dev:start",
     "dev:start": "nodemon --ignore lib --exec babel-node src/server",
+    "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
+    "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
+    "prod:stop": "pm2 delete server",
     "test": "eslint src && flow && jest --coverage",
     "precommit": "npm test",
-    "prepush": "npm test"
+    "prepush": "npm test && npm run-script prod:build"
   },
   "author": "Alex Doll",
   "license": "ISC",
@@ -22,12 +25,15 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-preset-flow": "^6.23.0",
+    "cross-env": "^5.2.0",
     "eslint": "^5.10.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.89.0",
     "husky": "^1.2.1",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "pm2": "^3.2.4",
+    "rimraf": "^2.6.2"
   }
 }
