--- a/package.json
+++ b/package.json
@@ -5,26 +5,32 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run-script dev:start",
-    "dev:start": "nodemon --ignore lib --exec babel-node src/server",
-    "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
+    "dev:start": "nodemon -e js,jsx --ignore lib --ignore dist --exec babel-node src/server",
+    "dev:wds": "webpack-dev-server --public localhost:8000 --progress",
+    "prod:build": "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress",
     "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
     "prod:stop": "pm2 delete server",
-    "test": "eslint src && flow && jest --coverage",
+    "lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
+    "test": "npm run-script lint && flow && jest --coverage",
     "precommit": "npm test",
     "prepush": "npm test && npm run-script prod:build"
   },
   "author": "Alex Doll",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
     "compression": "^1.7.3",
     "express": "^4.16.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-flow": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "babel-preset-flow": "^6.23.0",
+    "babel-loader": "^8.0.4",
     "cross-env": "^5.2.0",
     "eslint": "^5.10.0",
     "eslint-plugin-flowtype": "^3.2.0",
@@ -34,6 +40,9 @@
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "pm2": "^3.2.4",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.13"
   }
 }
