--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
